--- a/PortAudioSharp/PortAudioSharp.csproj
+++ b/PortAudioSharp/PortAudioSharp.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0-ios17.0;netstandard2.0;netcoreapp3.1;net6.0;net7.0;net8.0</TargetFrameworks>
-    <RuntimeIdentifiers Condition="'$(TargetFramework)' != 'net8.0-ios17.0'">linux-x64;linux-arm64;osx-x64;osx-arm64;win-x64</RuntimeIdentifiers>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0;net7.0;net8.0</TargetFrameworks>
+    <RuntimeIdentifiers Condition="'$(TargetFramework)' != 'net8.0-ios17.0'">linux-x64;linux-arm64;linux-loongarch64;osx-x64;osx-arm64;win-x64</RuntimeIdentifiers>
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net8.0-ios17.0'">ios-arm64</RuntimeIdentifier>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
@@ -22,8 +22,13 @@
     <PackageReleaseNotes>https://gitlab.com/define-private-public/Bassoon</PackageReleaseNotes>
   </PropertyGroup>
 
+  <PropertyGroup Condition="$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))">
+      <TargetFrameworks>$(TargetFrameworks);net8.0-ios17.0</TargetFrameworks>
+  </PropertyGroup>
+
   <PropertyGroup>
     <RestoreSources>./packages;$(RestoreSources);https://api.nuget.org/v3/index.json</RestoreSources>
+    <RestoreSources Condition="'$(Architecture)' == 'loongarch64'">$(RestoreSources);https://nuget.loongnix.cn/v3/index.json</RestoreSources>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,6 +37,7 @@
 
   <ItemGroup>
     <PackageReference Include="org.k2fsa.portaudio.runtime.linux-x64" Version="1.0.6" />
+    <PackageReference Include="org.k2fsa.portaudio.runtime.linux-loongarch64" Version="1.0.6" />
     <PackageReference Include="org.k2fsa.portaudio.runtime.linux-aarch64" Version="1.0.6" />
     <PackageReference Include="org.k2fsa.portaudio.runtime.osx-x64"   Version="1.0.6" />
     <PackageReference Include="org.k2fsa.portaudio.runtime.osx-arm64" Version="1.0.6" />
